# Py_WEB_12

./: README.en.md  README.md  pyproject.toml
src/: main.py
src/alembic/versions/: 7dadc56e4cec_auth.py
src/repository/: auth.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  auth_token.py
src/templates/: index.html
