[tool.poetry]
name = "py-web-12"
version = "0.1.0"
description = "HW api on fastapi with auth"
authors = ["Serghei <siracencoserghei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
libgravatar = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
